# randsik

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  NOTES.md  Pipfile  README.md  README.rst  TOOD.md  example.py  pyproject.toml  requirements.txt  setup.py  tester.py  tox.ini  travis.yml
.github/workflows/: python-app.yml
.pytest_cache/v/cache/: nodeids
docs/: conf.py  index.rst  installation.rst  modules.rst  randsik.rst  usage.rst
examples/: play_midi.py  song_example.py  write_midi_file.py
randsik/: __init__.py  constants.py  randsik.py
randsik/midi/drums/blues/: blues3.mid  blues4.mid  blues5.mid  blues6.mid
randsik/midi/drums/funk/: funk1.mid  funk2.mid  funk3.mid  funk4.mid  funk5.mid  funk6.mid  funk7.mid  funk8.mid
randsik/midi/drums/rock/: rock-fill1.mid  rock1.mid  rock10.mid  rock11.mid  rock12.mid  rock13.mid  rock14.mid  rock2.mid  rock3.mid  rock4.mid  rock5.mid  rock6.mid  rock7.mid  rock8.mid  rock9.mid
randsik/song_builder/: drums.py  song.py
test/: test_randsik.py
