[tool.poetry]
name = "randsik"
version = "0.1.0"
description = "library for generating random music in Python"
authors = ["Travis Hathaway <travis.j.hathaway@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mido = "^1.2.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
tox = "^3.23.1"
flake8 = "^3.9.2"
sphinx = "^4.0.2"
coverage = "^5.5"
black = "^21.5b1"
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
